K8s/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
    spec:
      volumes:
       - name: nginx-config
         configMap:
           name: ToDo_app
           items:
            - key: default.conf
              path: default.conf
      containers:
      - image: nginx
        name: nginx
        resources: {}
        volumeMounts:
         - name: nginx-config
           mountPath: /etc/nginx/templates/default.conf.template
           subPath: default.conf
status: {}
